--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.6.1",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.2.0",
+        "vue": "^3.5.13"
     }
 }
